final update for real

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="leaderboard">LeaderBoard</string>
     <string name="usersearch">UserSearch</string>
     <string name="log_out">Log out</string>
+    <string name="start">asdasda</string>
+    <string name="dialog_start_game">asdasdasdaaa</string>
+    <string name="cancel">asdasdd</string>
 </resources>
